[gd_scene load_steps=23 format=2]

[ext_resource path="res://youtube_zapping/images/yt_playbar.png.jpg" type="Texture" id=1]
[ext_resource path="res://youtube_zapping/icons/resize.png" type="Texture" id=2]
[ext_resource path="res://youtube_zapping/home.gd" type="Script" id=3]
[ext_resource path="res://youtube_zapping/Excited train guy_ New York_(720P_HD).ogv" type="VideoStream" id=4]
[ext_resource path="res://youtube_zapping/icons/play.png" type="Texture" id=5]
[ext_resource path="res://youtube_zapping/icons/min.png" type="Texture" id=6]
[ext_resource path="res://youtube_zapping/icons/close.png" type="Texture" id=7]
[ext_resource path="res://youtube_zapping/images/excited_train_guy - youtube-page.png.jpg" type="Texture" id=8]
[ext_resource path="res://youtube_zapping/icons/vol.png" type="Texture" id=9]
[ext_resource path="res://youtube_zapping/icons/pause.png" type="Texture" id=10]
[ext_resource path="res://youtube_zapping/icons/skip.png" type="Texture" id=11]
[ext_resource path="res://youtube_zapping/page.gd" type="Script" id=12]
[ext_resource path="res://youtube_zapping/vplayer.gd" type="Script" id=13]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.0470588, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.862745, 0.862745, 0.862745, 0.784314 )

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 38, 38 )

[node name="home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 3 )

[node name="page" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
script = ExtResource( 12 )

[node name="header" type="Control" parent="page"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 34 )

[node name="HBoxContainer" type="HBoxContainer" parent="page/header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="minimize" type="Button" parent="page/header/HBoxContainer"]
margin_left = 1145.0
margin_right = 1190.0
margin_bottom = 34.0
rect_min_size = Vector2( 45, 32 )
icon = ExtResource( 6 )
flat = true
icon_align = 1
expand_icon = true

[node name="resize" type="Button" parent="page/header/HBoxContainer"]
margin_left = 1190.0
margin_right = 1235.0
margin_bottom = 34.0
rect_min_size = Vector2( 45, 32 )
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="close" type="Button" parent="page/header/HBoxContainer"]
margin_left = 1235.0
margin_right = 1280.0
margin_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 45, 32 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="VideoContainer" type="Control" parent="page"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 124.0
margin_right = -17.0
margin_bottom = -113.0
script = ExtResource( 13 )

[node name="VideoPlayer" type="VideoPlayer" parent="page/VideoContainer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -238.5
margin_right = 360.0
margin_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 720, 0 )
stream = ExtResource( 4 )

[node name="overlay" type="Control" parent="page/VideoContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 1280, 60 )

[node name="TextureRect" type="TextureRect" parent="page/VideoContainer/overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="page/VideoContainer/overlay/TextureRect"]
anchor_right = 0.988
anchor_bottom = 1.0
margin_right = 0.359985
custom_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1265.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false

[node name="grabber" type="KinematicBody2D" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/ProgressBar"]
unique_name_in_owner = true
position = Vector2( 8, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/ProgressBar/grabber"]
margin_left = -7.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 7.0
color = Color( 1, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/ProgressBar/grabber"]
shape = SubResource( 6 )

[node name="timestamps" type="Control" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/ProgressBar"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Control" type="Control" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer"]
margin_top = 15.0
margin_right = 1265.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="left_controls" type="HBoxContainer" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.0
margin_right = 54.0
margin_bottom = 22.0
custom_constants/separation = 0

[node name="play" type="Button" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls"]
margin_right = 50.0
margin_bottom = 44.0
rect_min_size = Vector2( 50, 44 )
custom_styles/pressed = SubResource( 14 )
toggle_mode = true
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="skip" type="Button" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 44.0
rect_min_size = Vector2( 50, 44 )
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="vol" type="Button" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls"]
margin_left = 100.0
margin_right = 150.0
margin_bottom = 44.0
icon = ExtResource( 9 )
flat = true

[node name="HSlider" type="HSlider" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls"]
visible = false
margin_left = 150.0
margin_top = 14.0
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 16 )
size_flags_vertical = 4

[node name="time" type="Label" parent="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls"]
unique_name_in_owner = true
margin_left = 150.0
margin_top = 15.0
margin_right = 227.0
margin_bottom = 29.0
text = "  0:00 / 9:99"
align = 1
valign = 1

[connection signal="pressed" from="page/header/HBoxContainer/minimize" to="page" method="_on_minimize_pressed"]
[connection signal="pressed" from="page/header/HBoxContainer/resize" to="page" method="_on_resize_pressed"]
[connection signal="pressed" from="page/header/HBoxContainer/close" to="page" method="_on_close_pressed"]
[connection signal="gui_input" from="page/VideoContainer/VideoPlayer" to="page/VideoContainer" method="_on_VideoPlayer_gui_input"]
[connection signal="toggled" from="page/VideoContainer/overlay/TextureRect/VBoxContainer/Control/left_controls/play" to="page/VideoContainer" method="_on_play_toggled"]
